# sora2-fastapi

./: .dockerignore  .env.backup.old  .env.example  .env.template  .gitignore  .vercelignore  APIPOST_DOCUMENTATION.md  CLAUDE.md  CLOUDFLARE_CDN_SETUP.md  CLOUDFLARE_SETUP.md  CUSTOM_DOMAIN_SETUP.md  DEBUG_VERCEL_AUTODEPLOY.md  DEPLOYMENT.md  DEPLOY_TRIGGER.txt  DIAGNOSIS_AND_FIX.md  Dockerfile  FIX_AUTODEPLOY_NOW.md  FRONTEND_API_DOCUMENTATION.md  PROJECT_PLAN.md  QUICK_REFERENCE.md  REIMPORT_PROJECT.md  SCHEMA_CHANGES_SUMMARY.md  SERVERLESS_TROUBLESHOOTING.md  SORA_INTEGRATION.md  STEP_BY_STEP_FIX.md  STRIPE_INTEGRATION.md  SparkVideo_API_Collection.json  TEST_API.md  VERCEL_AUTODEPLOY_SETUP.md  VERCEL_AUTODEPLOY_SUMMARY.md  VERCEL_AUTO_DEPLOY_DIAGNOSIS.md  VERCEL_AUTO_DEPLOY_DIAGNOSIS_2025.md  VERCEL_CHECKLIST.md  VERCEL_DEPLOY.md  VERCEL_DEPLOYMENT_FIX.md  VERCEL_FIXES.md  VERCEL_QUICK_REFERENCE.md  VIDEO_SHOWCASE_API.md  alembic.ini  check_vercel_autodeploy.sh  (+22 more)
.vercel/: project.json
alembic/: env.py
alembic/versions/: 023c2aeb6d50_add_succeeded_to_paymentstatus_enum.py  09496f4dab63_add_video_showcase_table.py  0a7e451b655c_initial_migration_with_postgresql.py  add_sora_support.py  (+15 more)
api/: index.py  main.py  requirements.txt
app/: __init__.py
celery_app/: worker.py
scripts/: README.md  check_oss.py  download_and_upload.py  download_and_upload_sora_videos.py  download_sora_with_cookies.py  import_showcase_videos.py  prompts_example.txt  quick_start.sh  upload_videos_to_oss.py  video_urls_example.txt  videos_example.csv
tests/: test_stripe_integration.py
(+62 files in other folders)
