[project]
name = "sparkvideo-sora2-api"
version = "1.0.0"
description = "AI-powered video animation generation platform - Serverless API"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.0",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "httpx==0.27.0",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.9",
    "email-validator==2.2.0",
    "sqlalchemy==2.0.35",
    "asyncpg==0.30.0",
    "redis==5.1.0",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "authlib==1.3.2",
    "google-auth==2.34.0",
    "google-auth-oauthlib==1.2.1",
    "stripe==10.12.0",
    "oss2==2.18.6",
    "structlog==24.4.0",
]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 100
